--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
                 <div class="head__eye head__eye--right"></div>
             </div>
         </div>
-        <div class="layer-3"></div>
+        <div class="layer-3">
+            <div class="lawn"></div>
+            <div class="land"></div>
+        </div>
         <div class="layer-4">
             <div class="left-ear--outer"><div class="left-ear--inner"></div></div>
             <div class="right-ear--outer"><div class="right-ear--inner"></div></div>
@@ -34,7 +37,10 @@
                 <div class="head__eye head__eye--right"></div>
             </div>
         </div>
-        <div class="layer-5"></div>
+        <div class="layer-5">
+            <div class="lawn"></div>
+            <div class="land"></div>
+        </div>
         <div class="layer-6">
             <div class="left-ear--outer"><div class="left-ear--inner"></div></div>
             <div class="right-ear--outer"><div class="right-ear--inner"></div></div>
@@ -43,10 +49,23 @@
                 <div class="head__eye head__eye--right"></div>
             </div>
         </div>
-        <div class="layer-7"></div>
-        <div class="layer-8"></div>
-        <div class="layer-9"></div>
-        <div class="layer-10"></div>
+        <div class="layer-7">
+            <div class="lawn"></div>
+            <div class="land"></div>
+        </div>
+        <div class="layer-8">
+            <div class=" layer8__left-lawn layer8-lawn"></div>
+            <div class=" layer8__center-lawn layer8-lawn"></div>
+            <div class=" layer8__right-lawn layer8-lawn"></div>
+        </div>
+        <div class="layer-9">
+            <div class="layer9__left-cloud cloud"></div>
+            <div class="layer9__right-cloud cloud"></div>
+        </div>
+        <div class="layer-10">
+            <div class="layer10__left-cloud cloud"></div>
+            <div class="layer10__right-cloud cloud"></div>
+        </div>
     </div>
 </body>
 </html>
