--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <div class="phone">
+        <div class="phone__header">
+            <h1 class="phone__header--title"><img src="https://i.ibb.co/J3Kn71r/cbd152ddb203fe23ad78261749534e7d.png" alt="Animationland"></h1>
+            <h2 class="phone__header--subtitle"></h2>
+        </div>
         <div class="layer-1">
+            <input type="checkbox">
             <div class="left-ear--outer"><div class="left-ear--inner"></div></div>
             <div class="right-ear--outer"><div class="right-ear--inner"></div></div>
             <div class="head">
@@ -18,6 +23,7 @@
             </div>
         </div>
         <div class="layer-2">
+            <input type="checkbox">
             <div class="left-ear--outer"><div class="left-ear--inner"></div></div>
             <div class="right-ear--outer"><div class="right-ear--inner"></div></div>
             <div class="head">
@@ -30,6 +36,7 @@
             <div class="land"></div>
         </div>
         <div class="layer-4">
+            <input type="checkbox">
             <div class="left-ear--outer"><div class="left-ear--inner"></div></div>
             <div class="right-ear--outer"><div class="right-ear--inner"></div></div>
             <div class="head">
@@ -42,6 +49,7 @@
             <div class="land"></div>
         </div>
         <div class="layer-6">
+            <input type="checkbox">
             <div class="left-ear--outer"><div class="left-ear--inner"></div></div>
             <div class="right-ear--outer"><div class="right-ear--inner"></div></div>
             <div class="head">
@@ -67,5 +75,6 @@
             <div class="layer10__right-cloud cloud"></div>
         </div>
     </div>
+    <script src="./js/main.js"></script>
 </body>
 </html>
